# source-map-php

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
skills/: README.md
skills/source-map-php/: SKILL.md
skills/source-map-php/references/: commands.md  troubleshooting.md
skills/source-map-php/scripts/: env_probe.sh  sync_to_repo.sh
src/: composer.rs  config.rs  lib.rs  main.rs  meili.rs  models.rs  projects.rs  query.rs  sanitizer.rs  scanner.rs  tests_linker.rs
src/adapters/: hyperf.rs  laravel.rs  mod.rs
src/extract/: fallback.rs  mod.rs  phpactor.rs
tests/: fixtures_integration.rs
tests/fixtures/hyperf/: composer.json
tests/fixtures/hyperf/app/Controller/: ConsentController.php
tests/fixtures/hyperf/config/: routes.php
tests/fixtures/hyperf/test/Cases/: ConsentControllerTest.php
tests/fixtures/laravel/: composer.json
tests/fixtures/laravel/app/Http/Controllers/: PatientConsentController.php
tests/fixtures/laravel/app/Services/: ConsentService.php
tests/fixtures/laravel/database/migrations/: 2026_01_01_000000_create_consents_table.php
tests/fixtures/laravel/routes/: web.php
tests/fixtures/laravel/tests/Feature/: PatientConsentTest.php
