[package]
name = "source-map-php"
version = "0.1.3"
edition = "2024"
default-run = "source-map-php"
description = "CLI-first PHP code search indexer for Laravel and Hyperf repositories"
license = "MIT"
repository = "https://github.com/dickwu/source-map-php"
homepage = "https://github.com/dickwu/source-map-php"
documentation = "https://docs.rs/source-map-php"
readme = "README.md"
keywords = ["php", "search", "meilisearch", "laravel", "hyperf"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.49", features = ["derive"] }
dotenvy = "0.15.7"
globset = "0.4.18"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
tempfile = "3.23.0"
toml = "0.8.23"
url = { version = "2.5.7", features = ["serde"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
